@@ -1,5 +1,6 @@
 require 'singleton'
 require 'set'
+require 'date'
 require 'active_support'
 require 'active_support/version'
 if ::ActiveSupport::VERSION::MAJOR >= 3
