@@ -1,3 +1,7 @@
+* Enhancements
+
+  * :date_format option takes format for Date.strptime
+
 3.0.0.rc2 / 2013-08-28
 
 * Enhancements
